<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:drawableEnd="@drawable/ic_launcher_background"
      android:text="@string/txt_eg"
      android:textColor="@color/teal_200"
      android:textSize="@dimen/sp_20"
      android:textStyle="normal" />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="20dp"
      android:padding="20dp"
      android:text="This is text view2"
      android:textColor="@color/black" />


  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@drawable/test_bg"
      android:text="This is text view3" />

  <EditText
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:drawableStart="@android:drawable/ic_menu_search"
      android:drawablePadding="20dp"
      android:hint="@string/enter_your_name"
      android:inputType="text"

      />

  <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="submit"
      android:textSize="@dimen/sp_20"
      android:textStyle="bold"

      />

  <CheckBox
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:checked="false"
      android:text="@string/this_is_checkbox"
      android:textColor="@color/purple_200"
      android:textStyle="italic" />

  <RadioButton
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Option2"
      android:textSize="@dimen/sp_20" />

  <RadioGroup
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option2_from_group" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Option1 from Group" />
  </RadioGroup>

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:scaleType="fitCenter"
      android:src="@drawable/download" />
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Button 1"/>
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Button 2"/>
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Button 3"/>
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Button 4"/>
  </LinearLayout>

</LinearLayout>